tests/models/struct/named/unit/fail/min_length.stderr
error: Support condition is alias, default
 --> tests/models/struct/named/unit/fail/min_length.rs:5:5
  |
5 |     value: (),
  |     ^^^^^
